<resources>
    <string name="app_name">BookMate</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already Registered? Login here</string>
    <string name="btn_new_user">New user? Register here</string>
    <string name="copyrights">Copyrights Reserved</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="sell_a_book">Sell Your Book</string>
    <string name="settings">settings</string>
    <string-array name="book_category">
        <item>Sci-Fi</item>
        <item>Comedy</item>
        <item>Novel</item>
        <item>Magazine</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sell_books">Sell Your Book</string>
    <string name="post_the_ad">POST THE AD</string>
</resources>
