<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="prashanth.bookmate.LoginPage">

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:id="@+id/emailLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail"
            android:hint="email"
             />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/emailLayout"
        android:layout_alignLeft="@+id/emailLayout"
        android:layout_alignStart="@+id/emailLayout"
        android:id="@+id/passLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:id="@+id/loginPassword"
            android:hint="password"
            />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:text="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/loginButton"
        android:textColor="@android:color/black"
        android:background="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/loginPage_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/loginButton"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/linkToRegisterPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:layout_below="@id/loginPage_reset_password"
            android:textColor="@android:color/white"
            android:text="@string/btn_new_user"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/linkToRegisterPage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:text="@string/copyrights"
            android:textStyle="bold"
            android:textAllCaps="true"/>



    </RelativeLayout>


</RelativeLayout>
